<resources>
    <string name="app_name">Smart Planner</string>
    <string name="home_page">主页</string>
    <string name="statistic">统计</string>
    <string name="tomato_clock">番茄钟</string>
    <string name="calendar">日历</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="undo">撤销</string>
    <string name="title_activity_setting">设置</string>
    <string name="today">今天</string>
    <string name="yesterday">昨天</string>
    <string name="tomorrow">明天</string>
    <string name="add_todo_note">添加备注</string>
    <string name="add_todo_title">待办事项标题</string>
    <string name="add_todo_tag">添加标签</string>
    <string name="add_todo_tag_hint">输入标签，用空格分隔</string>
    <string name="refresh">刷新</string>
    <string name="delete">删除</string>
    <string name="view_detail">查看详情</string>
    <string name="todo">待办</string>
    <string name="advice">建议</string>
    <string name="habit">习惯</string>
    <string name="select_todo_alarm_time">选择提醒时间</string>
    <string name="select_todo_date">选择日期</string>
    <string name="todo_detail_page">待办事项详情</string>
    <string name="todo_type_today">今天</string>
    <string name="todo_type_important">重要</string>
    <string name="todo_type_has_planned">已计划</string>
    <string name="todo_type_has_not_planned">尚未计划</string>
    <string name="todo_type_all">全部</string>
    <string name="filter">筛选器</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="create_time">创建时间</string>
    <string name="complete_time">完成时间</string>
    <string name="not_created_yet">尚未创建</string>
    <string name="not_completed_yet">尚未完成</string>
    <string name="do_not_use_tag_filter">不筛选标签</string>
    <string name="confirm_to_delete">确定删除</string>
    <string name="confirm_to_delete_todo">确定要删除这条待办吗</string>
    <string name="step_statistic">步数统计</string>
    <string name="app_using_statistic">App使用统计</string>
    <string name="show_has_completed_todo">显示已完成</string>
    <string name="tag_colon">标签:</string>
    <string name="manage_todo_tags">管理标签</string>
    <string name="confirm_to_delete_todo_tag">确定删除标签吗</string>
    <string name="delete_todo_tag_message">删除标签并不会删除对应的待办事项</string>
    <string name="rename_todo_tag">重命名标签</string>
    <string name="input_new_todo_tag_name">输入标签的新名字</string>
    <string name="todo_tag_already_exist">该标签已经存在</string>
    <string name="tomato_clock_statistic">番茄钟数据</string>
    <string name="history">历史记录</string>
    <string name="confirm_to_give_up">确定要放弃吗</string>
    <string name="give_up">放弃</string>
    <string name="give_up_tomato_msg">您确定要放弃吗？</string>
    <string name="tomato_too_short_msg">番茄钟时长过短，将不计入记录</string>
    <string name="tomato_default_title">番茄钟</string>
    <string name="input_tomato_title">输入标题</string>
    <string name="single_work_len">单次工作时长</string>
    <string name="single_rest_len">单次休息时长</string>
    <string name="clock_count">重复次数</string>
    <string name="minute">分钟</string>
    <string name="start">开始</string>
    <string name="default_word">默认</string>
    <string name="total_time_colon">总时长:</string>
    <string name="date_colon">日期:</string>
    <string name="tomato_li_success">已完成</string>
    <string name="tomato_li_not_success">未完成</string>
    <string name="start_time_colon">开始时间:</string>
    <string name="end_time_colon">结束时间:</string>
    <string name="tomato_status_colon">状态:</string>
    <string name="work_time_sum_colon">工作总时长:</string>
    <string name="rest_time_sum_colon">休息总时长:</string>
    <string name="work_time_len_colon">单次工作时长:</string>
    <string name="rest_time_len_colon">单次休息时长:</string>
    <string name="clock_cnt_colon">设定的重复次数:</string>
    <string name="tomato_working">工作中</string>
    <string name="tomato_resting">休息中</string>
    <string name="skip_rest">跳过休息</string>
    <string name="empty_fragment_text">尚未实现</string>

</resources>
