<?xml version="1.0" encoding="utf-8"?><!--番茄钟Activity的布局文件-->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:fitsSystemWindows="true"
    tools:context=".activity.TomatoClockActivity">

    <!-- 标题栏AppBarLayout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tomato_clock_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/tomato_clock" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="vertical"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginHorizontal="0dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="0dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/tomato_clock_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="15dp"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/input_tomato_title"
                    android:textColorHint="@color/hint_text_trans_dark"
                    android:textColor="@color/white"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:textSize="22sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="0dp"
                android:layout_marginVertical="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="20dp">
                    <!--单次工作时长-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingHorizontal="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/single_work_len"
                                android:textColor="@color/work_tomato_color"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tomato_clock_work_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="5dp"
                                android:textColor="@color/work_tomato_color"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/minute"
                                android:textColor="@color/work_tomato_color"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <com.warkiz.widget.IndicatorStayLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.warkiz.widget.IndicatorSeekBar
                                android:id="@+id/tomato_clock_work_seek_bar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:isb_indicator_color="@color/work_tomato_color"
                                app:isb_max="90"
                                app:isb_min="1"
                                app:isb_progress="25"
                                app:isb_show_indicator="rounded_rectangle"
                                app:isb_thumb_color="@color/work_tomato_color"
                                app:isb_track_progress_color="@color/work_tomato_color" />
                        </com.warkiz.widget.IndicatorStayLayout>
                    </LinearLayout>

                    <!--单次休息时长-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingHorizontal="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/single_rest_len"
                                android:textColor="@color/rest_tomato_color"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tomato_clock_rest_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="5dp"
                                android:textColor="@color/rest_tomato_color"
                                android:textSize="16sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/minute"
                                android:textColor="@color/rest_tomato_color"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <com.warkiz.widget.IndicatorStayLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.warkiz.widget.IndicatorSeekBar
                                android:id="@+id/tomato_clock_rest_seek_bar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:isb_indicator_color="@color/rest_tomato_color"
                                app:isb_max="60"
                                app:isb_min="1"
                                app:isb_progress="5"
                                app:isb_show_indicator="rounded_rectangle"
                                app:isb_thumb_color="@color/rest_tomato_color"
                                app:isb_track_progress_color="@color/rest_tomato_color" />
                        </com.warkiz.widget.IndicatorStayLayout>

                    </LinearLayout>

                    <!--重复次数-->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="20dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingHorizontal="15dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/clock_count"
                                android:textColor="@color/count_tomato_color"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/tomato_clock_count_text"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginHorizontal="5dp"
                                android:textColor="@color/count_tomato_color"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <com.warkiz.widget.IndicatorStayLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <com.warkiz.widget.IndicatorSeekBar
                                android:id="@+id/tomato_clock_count_seek_bar"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:isb_indicator_color="@color/count_tomato_color"
                                app:isb_max="10"
                                app:isb_min="1"
                                app:isb_progress="1"
                                app:isb_show_indicator="rounded_rectangle"
                                app:isb_thumb_color="@color/count_tomato_color"
                                app:isb_track_progress_color="@color/count_tomato_color" />
                        </com.warkiz.widget.IndicatorStayLayout>

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="0dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/tomato_clock_default_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/default_word" />

            <Button
                android:id="@+id/tomato_clock_start_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_play_arrow_24dp"
                android:paddingHorizontal="50dp"
                android:text="@string/start" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>